--- a/AASing/AAS/Server_REC/build.gradle
+++ b/AASing/AAS/Server_REC/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.projectlombok:lombok:1.18.22'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -27,11 +28,16 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 
-	runtimeOnly 'com.h2database:h2'
+	implementation 'mysql:mysql-connector-java'
 
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+
+	implementation 'org.hyperledger.fabric:fabric-gateway:1.1.0'
+	implementation 'io.grpc:grpc-netty-shaded:1.47.0'
+	implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 tasks.named('test') {
