깃이그노어 재수정

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@ psd
 thumb
 sketch
 
-test.sh
+AASing/AAS/test.sh
+AASing/AAS/first_init.sh
 # End of https://www.toptal.com/developers/gitignore/api/react
