--- a/AASing/AAS/Server_REC/src/main/resources/application.yml
+++ b/AASing/AAS/Server_REC/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        #show_sql: true
-        format_sql: true
+#        show_sql: false
+        format_sql: false
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
 logging.level:
