--- a/AASing/AAS/Server_REC/build.gradle
+++ b/AASing/AAS/Server_REC/build.gradle
@@ -34,10 +34,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
-
 	implementation 'org.hyperledger.fabric:fabric-gateway:1.1.0'
 	implementation 'io.grpc:grpc-netty-shaded:1.49.0'
 	implementation 'com.google.code.gson:gson:2.9.0'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
 }
 
 tasks.named('test') {
